昨日追加&留意事項追加

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" >
 
-
 <head>
+
+
+
+
   <meta charset="UTF-8">
   <title>project 'Dream'</title>
   
@@ -11,16 +14,44 @@
   <link rel="stylesheet" href="css/header.css">  
   <link rel="stylesheet" href="css/footer.css">  
   <link rel="stylesheet" href="css/btn.css"> 
+  <link rel="stylesheet" href="css/slide.css"> 	
+  <link rel="stylesheet" href="css/popup.css"> 
 
+  
+<div class="popupModal1">
+ <input type="radio" name="modalPop" id="pop11" />
+ <label for="pop11" >注意事項 ← cleack here</label>
+ <input type="radio" name="modalPop" id="pop12" />
+ <label for="pop12">CLOSE</label>
+ <input type="radio" name="modalPop" id="pop13" />
+ <label for="pop13">×</label>
+ <div class="modalPopup2">
+  <div class="modalPopup3">
+   <h2 class="modalTitle">注意事項</h2>
+   <div class="modalMain">
+    <p>現在鋭意作成中です</p>
+    <p>写真の利用に関しては申請中でございます。</p>
+    <p> Photo by (c)Tomo.Yun</p>
+  <a href="http://www.yunphoto.net">ゆんフリー写真素材集 様</a>    
+    </div>
+  </div>
+ </div>
+</div>
 
 
   <header>
-       <div class="headline">
-    <div class="inner">
-      <p>夢を叶えたい！<p>
-      <h1>タイへの支援事業の切符をください！</h1>
-    </div>
-   </div>
+       <div id="mainimg">
+        <img src="img/1.jpg" alt="" id="slide1"/>
+        <img src="img/2.jpg" alt="" id="slide2"/>
+        <img src="img/3.jpg" alt="" id="slide3"/>
+         <div class="inner shadow">
+          <p>BitZenyで<p>
+          <h1>タイ支援の</br><nobr>応援してください！</nobr></h1>
+         </div>
+       </div>
+       <div class="wrap">
+  <a href="http://twitter.com/home?status= !@zenyhime tip " class="btn5" target="_blank">なげぜにぃ</a>
+　</div>
   </header>
 
 </head>
@@ -29,10 +60,8 @@
 
 <body>  
 
+
 <main>
-  <div class="wrap">
-  <a href="http://twitter.com/home?status= !@zenyhime tip " class="btn5" target="_blank">なげぜにぃ</a>
-　</div>
   <section>
   <h2>2018年3月予定のタイ支援事業！</h2>
   <p>Sed lectus mi, eleifend quis congue non, lacinia id quam. Cras porta pellentesque nulla, ac auctor ligula scelerisque non. In vel placerat lacus. Nam pretium vitae purus et laoreet. Aliquam erat volutpat. Pellentesque id volutpat sem, et condimentum nisl. Donec bibendum congue mauris, ac commodo tortor volutpat ac. Donec lobortis lorem nisi, sit amet bibendum lacus vestibulum interdum. Donec mollis ligula at semper iaculis.</p>
